--- a/eufy-security-ws/config.yaml
+++ b/eufy-security-ws/config.yaml
@@ -40,4 +40,4 @@ schema:
   stations:
     - serial_number: str
       ip_address: match(^(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)$)
-image: rasel800/hassio-eufy-security-ws-{arch}
+#image: rasel800/hassio-eufy-security-ws-{arch}
